<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/baca"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/imageButton"
            android:background="?android:selectableItemBackground"
            android:paddingTop="10dp"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apa"
            android:layout_marginTop="10dp"
            android:textSize="40dp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:paddingTop="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
       >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/imageViewAdd"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:background="@drawable/ic_baseline_add_photo_alternate_24" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlClassify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtClassify"
            android:layout_centerHorizontal="true"
            android:text="@string/clil"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="20dp">

        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlClassify"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputImageName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/leaveamessage">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relat1"
        android:gravity="center"
        android:text="0.0 %"
        android:textSize="25dp">

    </TextView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewProgress"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

    </ProgressBar>

    <RelativeLayout
        android:id="@+id/rlBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnClassify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/classify" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/btnClassify"
            android:text="@string/upload" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlBtn"
        android:gravity="center"
        android:text="@string/desc11"
        android:textSize="15dp">

    </TextView>

</RelativeLayout>